# ChessGUI

./: CMakeLists.txt  ChessGUI.qmlproject  ChessGUI.qmlproject.qtds  generate_ids.py  qmlmodules
content/: App.qml  ChessBoard.qml
imports/: CMakeLists.txt
imports/ChessGUI/: CMakeLists.txt  Constants.qml  qmldir
imports/ChessGUI/designer/: plugin.metainfo
src/: import_qml_plugins.h
